--- a/src/main/resources/com/mycompany/java/client/project/localMultiplayer.fxml
+++ b/src/main/resources/com/mycompany/java/client/project/localMultiplayer.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
@@ -41,6 +42,7 @@
                 </Label>
                 
                 <TextField fx:id="player2NameField" maxWidth="180" promptText="Enter name" styleClass="player-name-field" />
+            <ComboBox fx:id="genderComboPlayer2" prefWidth="150.0" promptText="Select Gender" styleClass="card-combo" />
                 
                 <Label styleClass="symbol-label, o-symbol" text="O">
                     
@@ -63,6 +65,7 @@
                 </Label>
                 
                 <TextField fx:id="player1NameField" maxWidth="180" promptText="Enter name" styleClass="player-name-field" />
+            <ComboBox fx:id="genderComboPlayer1" prefWidth="150.0" promptText="Select Gender" visibleRowCount="3"  styleClass="card-combo"/>
                 
                 <Label styleClass="symbol-label, x-symbol" text="X">
 
@@ -72,7 +75,7 @@
         </HBox>
         
         <!-- Start Button -->
-        <Button fx:id="startButton" maxWidth="300" minHeight="50" onAction="#handleStart" prefHeight="292.0" prefWidth="300.0" styleClass="start-button" text="Let's Go">
+        <Button fx:id="startButton" maxWidth="300" minHeight="50" onAction="#handleStart" prefHeight="280.0" prefWidth="300.0" styleClass="start-button" text="Let's Go">
         </Button>
         
     </VBox>
